name:                yuntan-share
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-share#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Share
                     , Share.Types
                     , Share.DS.Share
                     , Share.DS.ShareHistory
                     , Share.DS.Table
                     , Share.DS.Config
                     , Share.DS
                     , Share.API
                     , Share.Handler
                     , Share.Config
                     , Share.GraphQL
  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , mysql-simple
                     , aeson
                     , text
                     , unix-time
                     , yuntan-common-scotty
                     , yuntan-common-scotty-type
                     , yuntan-common-config-mysql
                     , yuntan-common-list-result
                     , yuntan-common-order
                     , yuntan-common-graphql
                     , haxl
                     , resource-pool
                     , async
                     , scotty
                     , bytestring
                     , http-types
                     , mtl

                     , graphql
  default-language:    Haskell2010

executable yuntan-share
  hs-source-dirs:      app
  main-is:             API.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-share
                     , optparse-applicative
                     , scotty
                     , haxl
                     , warp
                     , streaming-commons
                     , wai-extra
                     , data-default-class
                     , yaml
                     , text
                     , yuntan-common-config-mysql
                     , yuntan-common-scotty-type
  default-language:    Haskell2010

test-suite yuntan-share-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yuntan-share
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-share
